--- a/LaslesVPN/html/LaslesVPN.html
+++ b/LaslesVPN/html/LaslesVPN.html
@@ -160,164 +160,166 @@
     </div>
   </div>
   <div class="customers">
-    <div class="customer__inner">
-        <h3 class="section_title">Trusted by Thousands of Happy Customer</h3>
-        <p class="section_subtitle">These are the stories of our customers who have joined us with great pleasure when using this crazy feature.</p>
-        <div class="customer_stack">
-            <div class="customer_card">
-                <div class="customer_card_top">
-                    <div class="customer_card_top_info">
-                      <img src="../png/customer-avatar.png" alt="">  
-                      <div 
-                        class="customer_card_top_info_name">
-                        <h5>Viezh Robert</h5>
-                        <h6>Warsaw, Poland</h6>
-                        </div>
-                    </div>
-                    <div class="customer_card_top_rating">
-                        <p class="black">4.5</p>
-                        <img src="../svg/star.svg" alt="">
-                    </div>
-                </div>
-                <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
-            </div>
-            <div class="customer_card">
-                <div class="customer_card_top">
-                    <div class="customer_card_top_info">
-                      <img src="../png/customer-avatar.png" alt="">  
-                      <div 
-                        class="customer_card_top_info_name">
-                        <h5>Viezh Robert</h5>
-                        <h6>Warsaw, Poland</h6>
-                        </div>
-                    </div>
-                    <div class="customer_card_top_rating">
-                        <p class="black">4.5</p>
-                        <img src="../svg/star.svg" alt="">
-                    </div>
-                </div>
-                <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
-            </div>
-            <div class="customer_card">
-                <div class="customer_card_top">
-                    <div class="customer_card_top_info">
-                      <img src="../png/customer-avatar.png" alt="">  
-                      <div 
-                        class="customer_card_top_info_name">
-                        <h5>Viezh Robert</h5>
-                        <h6>Warsaw, Poland</h6>
-                        </div>
-                    </div>
-                    <div class="customer_card_top_rating">
-                        <p class="black">4.5</p>
-                        <img src="../svg/star.svg" alt="">
-                    </div>
-                </div>
-                <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
-            </div>
-            <div class="customer_card">
-                <div class="customer_card_top">
-                    <div class="customer_card_top_info">
-                      <img src="../png/customer-avatar.png" alt="">  
-                      <div 
-                        class="customer_card_top_info_name">
-                        <h5>Viezh Robert</h5>
-                        <h6>Warsaw, Poland</h6>
-                        </div>
-                    </div>
-                    <div class="customer_card_top_rating">
-                        <p class="black">4.5</p>
-                        <img src="../svg/star.svg" alt="">
-                    </div>
-                </div>
-                <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
-            </div>
-            <div class="customer_card">
-                <div class="customer_card_top">
-                    <div class="customer_card_top_info">
-                      <img src="../png/customer-avatar.png" alt="">  
-                      <div 
-                        class="customer_card_top_info_name">
-                        <h5>Viezh Robert</h5>
-                        <h6>Warsaw, Poland</h6>
-                        </div>
-                    </div>
-                    <div class="customer_card_top_rating">
-                        <p class="black">4.5</p>
-                        <img src="../svg/star.svg" alt="">
-                    </div>
-                </div>
-                <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
-            </div>
-            <div class="customer_card">
-                <div class="customer_card_top">
-                    <div class="customer_card_top_info">
-                      <img src="../png/customer-avatar.png" alt="">  
-                      <div 
-                        class="customer_card_top_info_name">
-                        <h5>Viezh Robert</h5>
-                        <h6>Warsaw, Poland</h6>
-                        </div>
-                    </div>
-                    <div class="customer_card_top_rating">
-                        <p class="black">4.5</p>
-                        <img src="../svg/star.svg" alt="">
-                    </div>
-                </div>
-                <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
-            </div>
-            <div class="customer_card">
-                <div class="customer_card_top">
-                    <div class="customer_card_top_info">
-                      <img src="../png/customer-avatar.png" alt="">  
-                      <div 
-                        class="customer_card_top_info_name">
-                        <h5>Viezh Robert</h5>
-                        <h6>Warsaw, Poland</h6>
-                        </div>
-                    </div>
-                    <div class="customer_card_top_rating">
-                        <p class="black">4.5</p>
-                        <img src="../svg/star.svg" alt="">
-                    </div>
-                </div>
-                <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
-            </div>
-            <div class="customer_card">
-                <div class="customer_card_top">
-                    <div class="customer_card_top_info">
-                      <img src="../png/customer-avatar.png" alt="">  
-                      <div 
-                        class="customer_card_top_info_name">
-                        <h5>Viezh Robert</h5>
-                        <h6>Warsaw, Poland</h6>
-                        </div>
-                    </div>
-                    <div class="customer_card_top_rating">
-                        <p class="black">4.5</p>
-                        <img src="../svg/star.svg" alt="">
-                    </div>
-                </div>
-                <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
-            </div>
-            
-        </div>
-
-    </div>
     <div class="container">
-          <div class="customer_slider">
+        <div class="customer__inner">
+            <h3 class="section_title">Trusted by Thousands of Happy Customer</h3>
+            <p class="section_subtitle">These are the stories of our customers who have joined us with great pleasure when using this crazy feature.</p>
+            <div class="customer_stack">
+                <div class="customer_card">
+                    <div class="customer_card_top">
+                        <div class="customer_card_top_info">
+                        <img src="../png/customer-avatar.png" alt="">  
+                        <div 
+                            class="customer_card_top_info_name">
+                            <h5>Viezh Robert</h5>
+                            <h6>Warsaw, Poland</h6>
+                            </div>
+                        </div>
+                        <div class="customer_card_top_rating">
+                            <p class="black">4.5</p>
+                            <img src="../svg/star.svg" alt="">
+                        </div>
+                    </div>
+                    <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
+                </div>
+                <div class="customer_card">
+                    <div class="customer_card_top">
+                        <div class="customer_card_top_info">
+                        <img src="../png/customer-avatar.png" alt="">  
+                        <div 
+                            class="customer_card_top_info_name">
+                            <h5>Viezh Robert</h5>
+                            <h6>Warsaw, Poland</h6>
+                            </div>
+                        </div>
+                        <div class="customer_card_top_rating">
+                            <p class="black">4.5</p>
+                            <img src="../svg/star.svg" alt="">
+                        </div>
+                    </div>
+                    <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
+                </div>
+                <div class="customer_card">
+                    <div class="customer_card_top">
+                        <div class="customer_card_top_info">
+                        <img src="../png/customer-avatar.png" alt="">  
+                        <div 
+                            class="customer_card_top_info_name">
+                            <h5>Viezh Robert</h5>
+                            <h6>Warsaw, Poland</h6>
+                            </div>
+                        </div>
+                        <div class="customer_card_top_rating">
+                            <p class="black">4.5</p>
+                            <img src="../svg/star.svg" alt="">
+                        </div>
+                    </div>
+                    <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
+                </div>
+                <div class="customer_card">
+                    <div class="customer_card_top">
+                        <div class="customer_card_top_info">
+                        <img src="../png/customer-avatar.png" alt="">  
+                        <div 
+                            class="customer_card_top_info_name">
+                            <h5>Viezh Robert</h5>
+                            <h6>Warsaw, Poland</h6>
+                            </div>
+                        </div>
+                        <div class="customer_card_top_rating">
+                            <p class="black">4.5</p>
+                            <img src="../svg/star.svg" alt="">
+                        </div>
+                    </div>
+                    <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
+                </div>
+                <div class="customer_card">
+                    <div class="customer_card_top">
+                        <div class="customer_card_top_info">
+                        <img src="../png/customer-avatar.png" alt="">  
+                        <div 
+                            class="customer_card_top_info_name">
+                            <h5>Viezh Robert</h5>
+                            <h6>Warsaw, Poland</h6>
+                            </div>
+                        </div>
+                        <div class="customer_card_top_rating">
+                            <p class="black">4.5</p>
+                            <img src="../svg/star.svg" alt="">
+                        </div>
+                    </div>
+                    <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
+                </div>
+                <div class="customer_card">
+                    <div class="customer_card_top">
+                        <div class="customer_card_top_info">
+                        <img src="../png/customer-avatar.png" alt="">  
+                        <div 
+                            class="customer_card_top_info_name">
+                            <h5>Viezh Robert</h5>
+                            <h6>Warsaw, Poland</h6>
+                            </div>
+                        </div>
+                        <div class="customer_card_top_rating">
+                            <p class="black">4.5</p>
+                            <img src="../svg/star.svg" alt="">
+                        </div>
+                    </div>
+                    <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
+                </div>
+                <div class="customer_card">
+                    <div class="customer_card_top">
+                        <div class="customer_card_top_info">
+                        <img src="../png/customer-avatar.png" alt="">  
+                        <div 
+                            class="customer_card_top_info_name">
+                            <h5>Viezh Robert</h5>
+                            <h6>Warsaw, Poland</h6>
+                            </div>
+                        </div>
+                        <div class="customer_card_top_rating">
+                            <p class="black">4.5</p>
+                            <img src="../svg/star.svg" alt="">
+                        </div>
+                    </div>
+                    <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
+                </div>
+                <div class="customer_card">
+                    <div class="customer_card_top">
+                        <div class="customer_card_top_info">
+                        <img src="../png/customer-avatar.png" alt="">  
+                        <div 
+                            class="customer_card_top_info_name">
+                            <h5>Viezh Robert</h5>
+                            <h6>Warsaw, Poland</h6>
+                            </div>
+                        </div>
+                        <div class="customer_card_top_rating">
+                            <p class="black">4.5</p>
+                            <img src="../svg/star.svg" alt="">
+                        </div>
+                    </div>
+                    <p>“Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best”.</p>
+                </div>
+            </div>
+        </div>
+        <div class="customer_slider">
             <div class="customer_dots">
                 <div class="dot_active"></div>
                 <div class="dot_default"></div>
                 <div class="dot_default"></div>
                 <div class="dot_default"></div>
+                <div class="dot_default"></div>
+                <div class="dot_default"></div>
+                <div class="dot_default"></div>
             </div>
             <div>
-              <button class="secondary"><img src="../svg/eva_arrow-back-fill.svg" alt=""></button>
-              <button class="primary"><img src="../svg/eva_arrow-forward-fill.svg" alt=""></button>
-          </div>
+              <button id="testimonial-left" class="secondary"><img src="../svg/eva_arrow-back-fill.svg" alt=""></button>
+              <button id="testimonial-right" class="primary"><img src="../svg/eva_arrow-forward-fill.svg" alt=""></button>
+            </div>
         </div>
     </div>
+
   </div>
   
   <div class="footer">
@@ -373,5 +375,7 @@
       </div>
   </div>
 </div>
+
+<script src="../js/lasles.js"></script>
 </body>
 </html>
