index file updated

--- a/index.html
+++ b/index.html
@@ -12,118 +12,147 @@
 <body>
     <div class="container">
         <div class="hero-container">
-            <h1>Javascripts projects</h1>
+            <h1>Projects</h1>
         </div>
         <div class="items-container">
-            <div class="row">
-                <div class="item">
-                    <img src="img/quote.png" alt="">
-                    <div class="item-inner">
-                        <h3>Quote Generator</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="quote-generator/index.html" target="_blank">See project</a>
-                    </div>
+            <a href="quote-generator/index.html" target="_blank"class="item">
+                <img src="img/quote.png" alt="">
+                <h3>Quote Generator</h3>
+                <p>Get a piece of wisdom with a one click.</p>
+            </a>
+            <a href="infinite-scroll/index.html" target="_blank" class="item">
+                <img src="img/scroll.png" alt="">
+                <div class="item-inner">
+                    <h3>Infinite Scroll</h3>
+                    <p>Scroll down a get new images from Unsplash.</p>
                 </div>
-                <div class="item">
-                    <img src="img/scroll.png" alt="">
-                    <div class="item-inner">
-                        <h3>Infinite Scroll</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="infinite-scroll/index.html" target="_blank">See project</a>
-                    </div>
+            </a>
+            <a href="picture-in-picture/index.html" target="_blank" class="item">
+                <img src="img/picture.png" alt="">
+                <div class="item-inner">
+                    <h3>Picture in Picture</h3>
+                    <p>You can make a picture-in-picture preview from your tab.</p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="item">
-                    <img src="img/picture.png" alt="">
-                    <div class="item-inner">
-                        <h3>Picture in Picture</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="picture-in-picture/index.html" target="_blank">See project</a>
-                    </div>
+            </a>
+            <a  href="joke-teller/index.html" target="_blank" class="item">
+                <img src="img/joke.png" alt="">
+                <div class="item-inner">
+                    <h3>Joke Teller</h3>
+                    <p>Random joke from a cute robot.</p>
                 </div>
-                <div class="item">
-                    <img src="img/joke.png" alt="">
-                    <div class="item-inner">
-                        <h3>Joke Teller</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="joke-teller/index.html" target="_blank">See project</a>
-                    </div>
+            </a>
+            <a href="light-dark-mode/index.html" target="_blank" class="item">
+                <img src="img/darkLight.png" alt="">
+                <div class="item-inner">
+                    <h3>Light and Dark Theme</h3>
+                    <p>Change toggle to see light and dark version of a website.</p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="item">
-                    <img src="img/darkLight.png" alt="">
-                    <div class="item-inner">
-                        <h3>Light and Dark Theme</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="light-dark-mode/index.html" target="_blank">See project</a>
-                    </div>
+            </a>
+            <a href="animated-template/index.html" target="_blank" class="item">
+                <img src="img/animated-template.png" alt="">
+                <div class="item-inner">
+                    <h3>Animated Template</h3>
+                    <p>Library for easy animations.</p>
                 </div>
-                <div class="item">
-                    <img src="img/animated-template.png" alt="">
-                    <div class="item-inner">
-                        <h3>Animated Template</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="animated-template/index.html" target="_blank">See project</a>
-                    </div>
+            </a>
+            <a href="animated-navigation/index.html" target="_blank" class="item">
+                <img src="img/navigation.png" alt="">
+                <div class="item-inner">
+                    <h3>Animated Navigation</h3>
+                    <p>Cool navigation appearance.</p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="item">
-                    <img src="img/navigation.png" alt="">
-                    <div class="item-inner">
-                        <h3>Animated Navigation</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="animated-navigation/index.html" target="_blank">See project</a>
-                    </div>
+            </a>
+            <a href="music-player/index.html" target="_blank" class="item">
+                <img src="img/audioplayer.png" alt="">
+                <div class="item-inner">
+                    <h3>Music Player</h3>
+                    <p>Absolutely custom audio player.</p>
                 </div>
-                <div class="item">
-                    <img src="img/audioplayer.png" alt="">
-                    <div class="item-inner">
-                        <h3>Music Player</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="music-player/index.html" target="_blank">See project</a>
-                    </div>
+            </a>
+            <a href="custom-countdown/index.html" target="_blank" class="item">
+                <img src="img/countdown.png" alt="">
+                <div class="item-inner">
+                    <h3>Custom Countdown</h3>
+                    <p>Create a countdwon to any event you want. Works even if the page was closed.</p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="item">
-                    <img src="img/countdown.png" alt="">
-                    <div class="item-inner">
-                        <h3>Custom Countdown</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="custom-countdown/index.html" target="_blank">See project</a>
-                    </div>
+            </a>
+            <a href="book-keeper/" target="_blank" class="item">
+                <img src="img/bookmarks.png" alt="">
+                <div class="item-inner">
+                    <h3>Bookmarks keeper</h3>
+                    <p>Add quick links to your favourite websites.</p>
                 </div>
-                <div class="item">
-                    <img src="img/bookmarks.png" alt="">
-                    <div class="item-inner">
-                        <h3>Bookmarks keeper</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="book-keeper/" target="_blank">See project</a>
-                    </div>
+            </a>
+            <a href="form-validation/index.html" target="_blank" class="item">
+                <img src="img/form-validation.png" alt="">
+                <div class="item-inner">
+                    <h3>Form Validation</h3>
+                    <p>All inputs are under control.</p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="item">
-                    <img src="img/countdown.png" alt="">
-                    <div class="item-inner">
-                        <h3>Form Validation</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="form-validation/index.html" target="_blank">See project</a>
-                    </div>
+            </a>
+            <a href="calculator/index.html" target="_blank" class="item">
+                <img src="img/calculator.png" alt="">
+                <div class="item-inner">
+                    <h3>Calculator</h3>
+                    <p>Ґрунт, База, так би мовити — Основа, Стрижень, Наріжний камінь і Фундамент, Твердиня, Осердя, Підвалина, Моноліт, Літосферна плита, Серцевина, Опора.</p>
                 </div>
-                <div class="item">
-                    <img src="img/bookmarks.png" alt="">
-                    <div class="item-inner">
-                        <h3>Bookmarks keeper</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="book-keeper/" target="_blank">See project</a>
-                    </div>
+            </a>
+            <a href="drag-and-drop/index.html" target="_blank" class="item">
+                <img src="img/kanban.png" alt="">
+                <div class="item-inner">
+                    <h3>Kanban Board</h3>
+                    <p>Simplefied though still quite effective kanban board.</p>
                 </div>
-            </div>
-           
+            </a>
+            <a href="LaslesVPN/html/LaslesVPN.html" target="_blank" class="item">
+                <img src="img/lasles.png" alt="">
+                <div class="item-inner">
+                    <h3>Lasles VPN</h3>
+                    <p>Landing page.</p>
+                </div>
+            </a>
+            <a href="nasa-api-pictures/index.html" target="_blank" class="item">
+                <img src="img/nasa.png" alt="">
+                <div class="item-inner">
+                    <h3>NASA Articles</h3>
+                    <p>Get the coolest images from NASA website.</p>
+                </div>
+            </a>
+            <a href="spock-rock-game/index.html" target="_blank" class="item">
+                <img src="img/rock-spock.png" alt="">
+                <div class="item-inner">
+                    <h3>Spock-Rock Game</h3>
+                    <p>Play Rock, Paper, Scissors, Lizard, Spock if you dare.</p>
+                </div>
+            </a>
+            <a href="Trafalgar/index.html" target="_blank" class="item">
+                <img src="img/trafalgar.png" alt="">
+                <div class="item-inner">
+                    <h3>Trafalgar Landing Page</h3>
+                    <p>Landing page.</p>
+                </div>
+            </a>
+            <a href="video-player/index.html" target="_blank" class="item">
+                <img src="img/video-player.png" alt="">
+                <div class="item-inner">
+                    <h3>Custom Video Player</h3>
+                    <p>Absolutely custom video player.</p>
+                </div>
+            </a>
+            <a href="css-animations/buttons.html" target="_blank" class="item">
+                <img src="img/buttons.png" alt="">
+                <div class="item-inner">
+                    <h3>Buttons CSS Animations</h3>
+                    <p>Hover over any button to see some magic.</p>
+                </div>
+            </a>
+            <a href="css-animations/images.html" target="_blank" class="item">
+                <img src="img/images.png" alt="">
+                <div class="item-inner">
+                    <h3>Images CSS Animations</h3>
+                    <p>Try to reach the image with a mouse.</p>
+                </div>
+            </a>
         </div>
     </div>
 </body>
