--- a/custom-countdown/index.html
+++ b/custom-countdown/index.html
@@ -16,7 +16,7 @@
 
     <div class="container">
         <div class="input-container" id="input-container" hidden>
-                <h1>Create Custom Countdown!</h1>
+                <h1>Create custom countdown!</h1>
                 <form action="" class="form" id="countdown-form">
                     <label for="title">Title</label>
                     <input type="text" id="title" placeholder="What are you counting down to?">
@@ -24,7 +24,7 @@
                     <label for="date-picker">Select a Date</label>
                     <input type="date" id="date-picker">
                     <p hidden>Select a date</p>
-                    <button type="submit">Submit</button>
+                    <button type="submit">Create Countdown for this Date</button>
                 </form>
         </div>
 
@@ -45,7 +45,6 @@
             <button id="complete-button">New Countdown</button>
         </div>
     </div>
-    <!-- Script -->
     <script src="script.js"></script>
 </body>
 </html>
