--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <div class="items-container">
             <a href="quote-generator/index.html" target="_blank"class="item">
                 <img src="img/quote.png" alt="">
-                <h3>Quote Generator</h3>
-                <p>Get a piece of wisdom with a one click.</p>
+                <div class="item-inner">
+                    <h3>Quote Generator</h3>
+                    <p>Get a piece of wisdom with a one click.</p>
+                </div>
             </a>
             <a href="infinite-scroll/index.html" target="_blank" class="item">
                 <img src="img/scroll.png" alt="">
