--- a/infinite-scroll/index.html
+++ b/infinite-scroll/index.html
@@ -10,16 +10,13 @@
     <title>Infinite Scroll</title>
 </head>
 <body>
-    <!-- Title -->
     <h1>Infinite Scroll </h1>
-    <!-- Loader -->
+    <p>Scroll down to see more pictures</p>
     <div  class="loader" id="loader">
         <img src="img/loader.svg" alt="loader">
     </div>
-    <!-- Image Container -->
     <div class="image-container" id="image-container">
     </div>
-    <!-- Script -->
     <script src="script.js"></script>
 </body>
 </html> 
