lasles. Slider functionality

--- a/LaslesVPN/html/LaslesVPN.html
+++ b/LaslesVPN/html/LaslesVPN.html
@@ -165,7 +165,7 @@
             <h3 class="section_title">Trusted by Thousands of Happy Customer</h3>
             <p class="section_subtitle">These are the stories of our customers who have joined us with great pleasure when using this crazy feature.</p>
             <div class="customer_stack">
-                <div class="customer_card">
+                <div class="customer_card card-active">
                     <div class="customer_card_top">
                         <div class="customer_card_top_info">
                         <img src="../png/customer-avatar.png" alt="">  
@@ -305,13 +305,14 @@
         </div>
         <div class="customer_slider">
             <div class="customer_dots">
-                <div class="dot_active"></div>
-                <div class="dot_default"></div>
-                <div class="dot_default"></div>
-                <div class="dot_default"></div>
-                <div class="dot_default"></div>
-                <div class="dot_default"></div>
-                <div class="dot_default"></div>
+                <div class="dot dot-active" onclick="translateCards(1)"></div>
+                <div class="dot" onclick="translateCards(2)"></div>
+                <div class="dot" onclick="translateCards(3)"></div>
+                <div class="dot" onclick="translateCards(4)"></div>
+                <div class="dot" onclick="translateCards(5)"></div>
+                <div class="dot" onclick="translateCards(6)"></div>
+                <div class="dot" onclick="translateCards(7)"></div>
+                <div class="dot" onclick="translateCards(8)"></div>
             </div>
             <div>
               <button id="testimonial-left" class="secondary"><img src="../svg/eva_arrow-back-fill.svg" alt=""></button>
