laslesVPN responsive finished

--- a/LaslesVPN/html/LaslesVPN.html
+++ b/LaslesVPN/html/LaslesVPN.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LaslesVPN</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/LaslesVPN.css">
 </head>
 <body>
-  <div class="hero">
+  <div class="hero" id="hero">
       <div class="container" >
           <div class="menu">
-              <img src="../svg/Logo.svg" alt="">
+              <a href='#' class="logo"></a>
               <nav>
                   <a href="#features">Features</a>
                   <a href="#pricing">Pricing</a>
@@ -281,7 +281,7 @@
   <div class="customers" id="testimonials">
     <div class="container">
         <div class="customer__inner">
-            <h3 class="section_title">Trusted by Thousands of Happy Customer</h3>
+            <h3 class="section_title">Trusted by Thousands of<br/> Happy Customer</h3>
             <p class="section_subtitle">These are the stories of our customers who have joined us with great pleasure when using this crazy feature.</p>
             <div class="wrapper">
                 <div class="customer_stack">
